update logic to validate and construct jid server type
