# internal/whatsapp/whatsapp.go
@@ -121,6 +121,33 @@ func Logout(c echo.Context) error {
 	return router.ResponseSuccess(c, "Successfully Logged Out")
 }
 
+// Registered
+// @Summary     Check If Phone Number is Registered in WhatsApp
+// @Description Check Phone Number is Registered in WhatsApp
+// @Tags        WhatsApp Authentication
+// @Produce     json
+// @Param       msisdn    query  string  true  "Phone Number to Check"
+// @Success     200
+// @Security    BearerAuth
+// @Router      /api/v1/whatsapp/registered [get]
+func Registered(c echo.Context) error {
+	jid := jwtPayload(c).JID
+	rjid := strings.TrimSpace(c.QueryParam("msisdn"))
+
+	if len(rjid) == 0 {
+		return router.ResponseInternalError(c, "Missing Param Value MSISDN")
+	}
+
+	rjid = pkgWhatsApp.WhatsAppDecomposeJID(rjid)
+
+	_, isJIDRegistered := pkgWhatsApp.WhatsAppCheckJID(jid, rjid)
+	if !isJIDRegistered {
+		return router.ResponseNotFound(c, "Phone Number is Not Registered")
+	}
+
+	return router.ResponseSuccess(c, "Phone Number is Registered")
+}
+
 // SendText
 // @Summary     Send Text Message
 // @Description Send Text Message to Spesific Phone Number
